--- a/Gw2Sharp.Build/DocFX/Gw2Sharp.Build.DocFX.csproj
+++ b/Gw2Sharp.Build/DocFX/Gw2Sharp.Build.DocFX.csproj
@@ -47,21 +47,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
-    <None Include="api\.gitignore" />
     <None Include="api\index.md" />
-    <None Include="articles\intro.md" />
-    <None Include="articles\toc.md" />
+    <None Include="faq\overview.md" />
+    <None Include="faq\toc.yml" />
+    <None Include="guides\introduction.md" />
+    <None Include="guides\toc.yml" />
     <None Include="docfx.json" />
     <None Include="index.md" />
     <None Include="packages.config" />
     <None Include="toc.yml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\packages\docfx.console.2.40.7\build\docfx.console.targets" Condition="Exists('..\..\packages\docfx.console.2.40.7\build\docfx.console.targets')" />
+  <Import Project="..\..\packages\docfx.console.2.40.12\build\docfx.console.targets" Condition="Exists('..\..\packages\docfx.console.2.40.12\build\docfx.console.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\docfx.console.2.40.7\build\docfx.console.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\docfx.console.2.40.7\build\docfx.console.targets'))" />
+    <Error Condition="!Exists('..\..\packages\docfx.console.2.40.12\build\docfx.console.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\docfx.console.2.40.12\build\docfx.console.targets'))" />
   </Target>
 </Project>
