--- a/Gw2Sharp.Build/DocFX/toc.yml
+++ b/Gw2Sharp.Build/DocFX/toc.yml
@@ -1,6 +1,11 @@
-
-- name: Articles
-  href: articles/
+- name: Guides
+  href: guides/
+  topicUid: Guides.Introduction
+- name: FAQ
+  href: faq/
+  topicUid: FAQ.Overview
 - name: API Documentation
   href: obj/api/
-  homepage: api/index.md
+  topicUid: API.Index
+- name: Changelog
+  topicHref: ../CHANGELOG.md
