--- a/.editorconfig
+++ b/.editorconfig
@@ -7,19 +7,30 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 # Formatting conventions
+# More information: https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference?view=vs-2019
+
+# "This." and "Me." qualifiers
 dotnet_style_qualification_for_field = true:warning
 dotnet_style_qualification_for_property = true:warning
 dotnet_style_qualification_for_method = true:warning
 dotnet_style_qualification_for_event = true:warning
+
+# Language keywords instead of framework type names for type references
 dotnet_style_predefined_type_for_locals_parameters_members = true:warning
 dotnet_style_predefined_type_for_member_access = true:warning
+
+# Modifier preferences
 dotnet_style_require_accessibility_modifiers = always:warning
 csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:warning
 dotnet_style_readonly_field = true:warning
+
+# Parentheses preferences
 dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:warning
 dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:warning
 dotnet_style_parentheses_in_other_operators = never_if_unnecessary:warning
 dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:warning
+
+# Expression-level preferences
 dotnet_style_object_initializer = true:suggestion
 dotnet_style_collection_initializer = true:suggestion
 dotnet_style_explicit_tuple_names = true:suggestion
@@ -29,27 +40,48 @@ dotnet_style_prefer_auto_properties = true:warning
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:warning
 dotnet_style_prefer_conditional_expression_over_assignment = true:warning
 dotnet_style_prefer_conditional_expression_over_return = true:warning
+
+# Null-checking preferences
 dotnet_style_coalesce_expression = true:warning
 dotnet_style_null_propagation = true:warning
+
+# Implicit and explicit types
 csharp_style_var_for_built_in_types = false:warning
 csharp_style_var_when_type_is_apparent = true:warning
 csharp_style_var_elsewhere = true:warning
+
+# Expression-bodied members
 csharp_style_expression_bodied_methods = when_on_single_line:suggestion
 csharp_style_expression_bodied_constructors = false:warning
 csharp_style_expression_bodied_operators = when_on_single_line:suggestion
 csharp_style_expression_bodied_properties = when_on_single_line:suggestion
 csharp_style_expression_bodied_indexers = when_on_single_line:suggestion
 csharp_style_expression_bodied_accessors = when_on_single_line:suggestion
+
+# Pattern matching
 csharp_style_pattern_matching_over_is_with_cast_check = true:warning
 csharp_style_pattern_matching_over_as_with_null_check = true:warning
+
+# Inlined variable declarations
 csharp_style_inlined_variable_declaration = true:warning
+
+# Expression-level preferences
 csharp_prefer_simple_default_expression = true:warning
 csharp_style_deconstructed_variable_declaration = true:warning
 csharp_style_pattern_local_over_anonymous_function = true:warning
+
+# "Null" checking preferences
 csharp_style_throw_expression = true:warning
 csharp_style_conditional_delegate_call = true:warning
+
+# Code block preferences
 csharp_prefer_braces = false:suggestion
+
+# Organize usings
 dotnet_sort_system_directives_first = true
+dotnet_separate_import_directive_groups = false
+
+# Newline options
 csharp_new_line_before_open_brace = all
 csharp_new_line_before_else = true
 csharp_new_line_before_catch = true
@@ -57,9 +89,13 @@ csharp_new_line_before_finally = true
 csharp_new_line_before_members_in_object_initializers = true
 csharp_new_line_before_members_in_anonymous_types = true
 csharp_new_line_between_query_expression_clauses = true
+
+# Indentation options
 csharp_indent_case_contents = true
 csharp_indent_switch_labels = true
 csharp_indent_labels = no_change
+
+# Spacing options
 csharp_space_after_cast = false
 csharp_space_after_keywords_in_control_flow_statements = true
 csharp_space_between_method_declaration_parameter_list_parentheses = false
@@ -71,61 +107,79 @@ csharp_space_around_binary_operators = before_and_after
 csharp_space_between_method_declaration_empty_parameter_list_parentheses = false
 csharp_space_between_method_call_name_and_opening_parenthesis = false
 csharp_space_between_method_call_empty_parameter_list_parentheses = false
+
+# Wrapping options
 csharp_preserve_single_line_statements = false
 csharp_preserve_single_line_blocks = true
 
 # Naming conventions
+# More information: https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-naming-conventions?view=vs-2019
+#   Type parameters (prefix + pascal)
+dotnet_naming_rule.type_parameters_must_be_prefixed_with_a_t.symbols = type_parameters
+dotnet_naming_rule.type_parameters_must_be_prefixed_with_a_t.style = type_parameter_prefix
+dotnet_naming_rule.type_parameters_must_be_prefixed_with_a_t.severity = error
+dotnet_naming_symbols.type_parameters.applicable_kinds = type_parameter
+dotnet_naming_style.type_parameter_prefix.capitalization = pascal_case
+dotnet_naming_style.type_parameter_prefix.required_prefix = T
+
+#   Interfaces (prefix + pascal)
+dotnet_naming_rule.interfaces_must_be_prefixed_with_an_i.symbols = interfaces
+dotnet_naming_rule.interfaces_must_be_prefixed_with_an_i.style = interface_prefix
+dotnet_naming_rule.interfaces_must_be_prefixed_with_an_i.severity = error
+dotnet_naming_symbols.interfaces.applicable_kinds = interface
+dotnet_naming_style.interface_prefix.capitalization = pascal_case
+dotnet_naming_style.interface_prefix.required_prefix = I
+
+#   Constants (all upper)
+dotnet_naming_rule.consts_must_be_all_upper.symbols = consts
+dotnet_naming_rule.consts_must_be_all_upper.style = upper
+dotnet_naming_rule.consts_must_be_all_upper.severity = warning
+dotnet_naming_symbols.consts.required_modifiers = const
+
+#   Public symbols (pascal)
 dotnet_naming_rule.public_members_must_be_pascal_case.symbols = public_symbols
 dotnet_naming_rule.public_members_must_be_pascal_case.style = pascal_case
-dotnet_naming_rule.public_members_must_be_pascal_case.severity = warning
-
-dotnet_naming_rule.static_fields_must_be_pascal_case.symbols = static_symbols
-dotnet_naming_rule.static_fields_must_be_pascal_case.style = pascal_case
-dotnet_naming_rule.static_fields_must_be_pascal_case.severity = warning
-
-dotnet_naming_rule.private_fields_must_be_camel_case.symbols = private_symbols
-dotnet_naming_rule.private_fields_must_be_camel_case.style = camel_case
-dotnet_naming_rule.private_fields_must_be_camel_case.severity = warning
-
-dotnet_naming_rule.non_variables_must_be_pascal_case.symbols = non_variables
-dotnet_naming_rule.non_variables_must_be_pascal_case.style = pascal_case
-dotnet_naming_rule.non_variables_must_be_pascal_case.severity = warning
-
-dotnet_naming_rule.variables_must_be_camel_case.symbols = variables
-dotnet_naming_rule.variables_must_be_camel_case.style = camel_case
-dotnet_naming_rule.variables_must_be_camel_case.severity = warning
-
-dotnet_naming_rule.interfaces_must_start_with_an_i.symbols = interfaces
-dotnet_naming_rule.interfaces_must_start_with_an_i.style = interface_prefix
-dotnet_naming_rule.interfaces_must_start_with_an_i.severity = warning
-
-dotnet_naming_rule.async_methods_require_suffix.symbols = async_methods
-dotnet_naming_rule.async_methods_require_suffix.style = async_suffix
-dotnet_naming_rule.async_methods_require_suffix.severity = warning
-
-
+dotnet_naming_rule.public_members_must_be_pascal_case.severity = error
 dotnet_naming_symbols.public_symbols.applicable_kinds = class,struct,interface,enum,property,method,field,event,delegate
 dotnet_naming_symbols.public_symbols.applicable_accessibilities = public
 
-dotnet_naming_symbols.static_symbols.required_modifiers = static
+#   Fields (camel)
+dotnet_naming_rule.private_fields_must_be_camel_case.symbols = fields
+dotnet_naming_rule.private_fields_must_be_camel_case.style = camel_case
+dotnet_naming_rule.private_fields_must_be_camel_case.severity = warning
+dotnet_naming_symbols.fields.applicable_kinds = field
 
-dotnet_naming_symbols.private_symbols.applicable_kinds = field
-dotnet_naming_symbols.private_symbols.applicable_accessibilities = private
+#   Parameters (camel)
+dotnet_naming_rule.parameters_must_be_camel_case.symbols = parameters
+dotnet_naming_rule.parameters_must_be_camel_case.style = camel_case
+dotnet_naming_rule.parameters_must_be_camel_case.severity = warning
+dotnet_naming_symbols.parameters.applicable_kinds = parameter
 
-dotnet_naming_symbols.non_variables.applicable_kinds = namespace,class,struct,interface,enum,property,method,event,delegate,type_parameter,local_function
+#   Locals (camel)
+dotnet_naming_rule.locals_must_be_camel_case.symbols = locals
+dotnet_naming_rule.locals_must_be_camel_case.style = local_prefix
+dotnet_naming_rule.locals_must_be_camel_case.severity = warning
+dotnet_naming_symbols.locals.applicable_kinds = local
 
-dotnet_naming_symbols.variables.applicable_kinds = parameter,local
-
-dotnet_naming_symbols.interfaces.kinds = interface
-
+#   Async methods (suffix + pascal)
+dotnet_naming_rule.async_methods_require_suffix.symbols = async_methods
+dotnet_naming_rule.async_methods_require_suffix.style = async_suffix
+dotnet_naming_rule.async_methods_require_suffix.severity = error
 dotnet_naming_symbols.async_methods.kinds = method
 dotnet_naming_symbols.async_methods.required_modifiers = async
+dotnet_naming_style.async_suffix.capitalization = pascal_case
+dotnet_naming_style.async_suffix.required_suffix = Async
 
+#   Other non-variable symbols (pascal)
+dotnet_naming_rule.non_variables_must_be_pascal_case.symbols = non_variables
+dotnet_naming_rule.non_variables_must_be_pascal_case.style = pascal_case
+dotnet_naming_rule.non_variables_must_be_pascal_case.severity = error
+dotnet_naming_symbols.non_variables.applicable_kinds = namespace,class,struct,interface,enum,property,method,event,delegate,type_parameter,local_function
 
 dotnet_naming_style.pascal_case.capitalization = pascal_case
 dotnet_naming_style.camel_case.capitalization = camel_case
-dotnet_naming_style.interface_prefix.required_prefix = I
-dotnet_naming_style.async_suffix.required_suffix = Async
+dotnet_naming_style.upper.capitalization = all_upper
+
 
 [*.json]
 # Formatting
