--- a/Gw2Sharp.Build/DocFX/toc.yml
+++ b/Gw2Sharp.Build/DocFX/toc.yml
@@ -8,4 +8,4 @@
   href: obj/api/
   topicUid: API.Index
 - name: Changelog
-  topicHref: ../CHANGELOG.md
+  topicHref: https://github.com/Archomeda/Gw2Sharp/blob/master/CHANGELOG.md
