--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,6 +70,7 @@ pack:
 deploy:docs:
   <<: *task
   stage: deploy
+  environment: deploy/docs
   image: ubuntu
   dependencies:
     - build:docs
@@ -95,6 +96,7 @@ deploy:docs:
 deploy:github:
   <<: *task
   stage: deploy
+  environment: deploy/github
   image: ubuntu
   dependencies:
     - build:binaries
@@ -115,6 +117,7 @@ deploy:github:
   # TODO
   <<: *task
   stage: deploy
+  environment: deploy/nuget
   image: ubuntu
   dependencies:
     - pack
