--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,10 @@ build:binaries:
   stage: build
   dependencies:
     - versioning
-  script: dotnet build Gw2Sharp -c $CONFIGURATION -f netstandard2.0 -o out_bin
+  script:
+    - dotnet tool install -g InheritDocTool
+    - dotnet build Gw2Sharp -c $CONFIGURATION -o out_bin
+    - InheritDoc
   artifacts:
     paths:
       - out_bin/
@@ -45,8 +48,8 @@ build:docs:
     - apt update && apt install wget unzip -y
     - wget -q https://github.com/dotnet/docfx/releases/latest/download/docfx.zip
     - unzip docfx.zip
-    - mono docfx.exe Gw2Sharp.Build/DocFX/docfx.json
-    - mv Gw2Sharp.Build/DocFX/_site out_doc
+    - mono docfx.exe Gw2Sharp.DocFX/docfx.json
+    - mv Gw2Sharp.DocFX/_site out_doc
   artifacts:
     paths:
       - out_doc/
@@ -55,13 +58,17 @@ build:docs:
 test:
   <<: *task
   stage: test
-  script: dotnet test Gw2Sharp.Tests -c $CONFIGURATION -f netstandard2.0
+  script: dotnet test Gw2Sharp.Tests -c $CONFIGURATION
 
 pack:
   # TODO: Make this autoversioned
   <<: *task
   stage: pack
-  script: dotnet pack Gw2Sharp -c $CONFIGURATION --include-symbols -o out_pack
+  script: 
+    - dotnet tool install -g InheritDocTool
+    - dotnet build Gw2Sharp -c $CONFIGURATION
+    - InheritDoc
+    - dotnet pack Gw2Sharp -c $CONFIGURATION --no-build --include-symbols -o out_pack
   artifacts:
     paths:
       - out_pack/
