--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 image: Visual Studio 2019 Preview
 version: '{build}'
 
-configuration: AppVeyor
+configuration: Debug
 
 skip_branch_with_pr: true
 
