--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ stages:
   extends: .task
   before_script:
     - apt update
-    - apt install -y wget
+    - apt install -y software-properties-common wget
     - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
     - dpkg -i packages-microsoft-prod.deb
     - add-apt-repository universe
