--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,10 +18,9 @@ stages:
   extends: .task
   before_script:
     - apt update
-    - apt install -y software-properties-common wget
+    - apt install -y wget
     - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
     - dpkg -i packages-microsoft-prod.deb
-    - add-apt-repository universe
     - apt-get install -y apt-transport-https
     - apt-get update
     - install aspnetcore-runtime-2.1
