--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ stages:
     - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
     - dpkg -i packages-microsoft-prod.deb
     - apt-get install -y apt-transport-https
+    - add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) universe"
     - apt-get update
     - apt-get install -y aspnetcore-runtime-2.1
     - dotnet tool install -g InheritDocTool
