--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,14 @@ stages:
   extends: .task
   before_script:
     - apt update
-    - apt install -y software-properties-common wget
-    - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
-    - dpkg -i packages-microsoft-prod.deb
-    - apt-get install -y apt-transport-https
-    - add-apt-repository "deb http://archive.ubuntu.com/ubuntu bionic universe"
+    - apt install -y wget
+    - wget -qO- https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.asc.gpg
+    - mv microsoft.asc.gpg /etc/apt/trusted.gpg.d/
+    - wget -q https://packages.microsoft.com/config/debian/9/prod.list
+    - mv prod.list /etc/apt/sources.list.d/microsoft-prod.list
+    - chown root:root /etc/apt/trusted.gpg.d/microsoft.asc.gpg
+    - chown root:root /etc/apt/sources.list.d/microsoft-prod.list
+    - apt-get install apt-transport-https
     - apt-get update
     - apt-get install -y aspnetcore-runtime-2.1
     - dotnet tool install -g InheritDocTool
