Add HTTP header related guides

--- a/Gw2Sharp.DocFX/guides/toc.yml
+++ b/Gw2Sharp.DocFX/guides/toc.yml
@@ -8,3 +8,7 @@
       topicUid: Guides.ParameterizedEndpoints
     - name: Subtokens
       topicUid: Guides.Subtokens
+    - name: HTTP headers
+      topicUid: Guides.HttpHeaders
+    - name: Last-Modified
+      topicUid: Guides.LastModified
